# SimplePlatformer

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile.zsh  compile_commands.json  compileshaders.sh  compileshaders.zsh  flake.nix  styleguide.md
src/: ansiescapecodes.h  compilesettings.h  debugprint.h  main.cpp  physicaldevice.cpp  physicaldevice.h  window.cpp  window.h
src/engine/: cleanup.cpp  cleanupengine.cpp  cleanupengine.h  engine.cpp  engine.h  enginedata.h  initengine.cpp  initengine.h  models.cpp  models.h  physicaldevice.cpp  physicaldevice.h  vertex.cpp  vertex.h  window.cpp  window.h
src/engine/vulkan/: buffers.cpp  buffers.h  commandobjects.cpp  commandobjects.h  descriptorsets.cpp  descriptorsets.h  device.cpp  device.h  extensions.cpp  extensions.h  graphicspipeline.cpp  graphicspipeline.h  instance.cpp  instance.h  physicaldevice.cpp  physicaldevice.h  rendering.cpp  rendering.h  renderpass.cpp  renderpass.h  shaders.cpp  shaders.h  swapchain.cpp  swapchain.h  syncronization.cpp  syncronization.h  ubo.cpp  ubo.h  utils.cpp  utils.h  validationlayers.cpp  validationlayers.h  vulkan.cpp  vulkan.h
src/game/: gamedata.h  main.cpp  main.h
src/game/shaders/: vertex.glsl
src/utils/: debugprint.h  fileio.cpp
